re-back the setting changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "git.allowNoVerifyCommit": true,
     "git.autofetch": false,
-    "git.postCommitCommand": "push"
+    "git.postCommitCommand": "none"
 }
