--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "git.allowNoVerifyCommit": true,
     "git.autofetch": false,
     "git.postCommitCommand": "none",
-    "gitdoc.enabled": false
+    "gitdoc.enabled": true
 }
