--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
     "git.allowNoVerifyCommit": true,
     "git.autofetch": false,
     "git.postCommitCommand": "none",
-    "gitdoc.enabled": false,
+    "gitdoc.enabled": true,
     "gitdoc.autoPushDelay": 10000
 }
