--- a/offlineToDo/package.json
+++ b/offlineToDo/package.json
@@ -40,7 +40,7 @@
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5",
-    "next-pwa": "latest"
+    "next-pwa": "^5.6.0"
       
     }
 }
