--- a/client-todo/package.json
+++ b/client-todo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "offlinetodo",
+  "name": "client-todo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -39,8 +39,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5",
-    "next-pwa": "^5.6.0"
-      
+    "vite": "^6.0.5"      
     }
 }
